--- a/templates/task_detail.html
+++ b/templates/task_detail.html
@@ -3,15 +3,17 @@
 {% block title %}{{ task.title }} - My Course Site{% endblock %}
 
 {% block content %}
+<link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+
 <div class="task-detail-container">
-    <aside class="sidebar">
+    <aside class="task-detail-sidebar">
         <h2>Modules</h2>
         <ul>
             {% if modules %}
                 {% for module_id, module in modules.items() %}
                     <li>
                         <a href="{{ url_for('module_detail', module_id=module_id) }}" class="module-link">
-                            {{ module.title }}
+                            {{ module.title | default('Unnamed Module') }}
                         </a>
                     </li>
                 {% endfor %}
@@ -23,49 +25,340 @@
 
     <main class="main-content">
         <div class="task-header">
-            <h1>{{ task.title }}</h1>
-            <p>{{ task.description }}</p>
+            <h1>{{ task.title | default('Untitled Task') }}</h1>
+            <p>{{ task.description | default('No description available.') }}</p>
 
+            {% if task.type != 'theoretical' %}
             <div class="action-buttons">
                 <a href="{{ url_for('explanation', module_id=module_id, task_id=task_id) }}" class="btn">See Explanation</a>
                 <a href="{{ url_for('solution', module_id=module_id, task_id=task_id) }}" class="btn">See Solution</a>
-                <a href="{{ url_for('interpreter', module_id=module_id, task_id=task_id) }}" class="btn">Open Interpreter</a>
+                <a href="{{ url_for('interpreter')}}" class="btn">Open Interpreter</a>
             </div>
-        </div>
-
-        <div class="task-content">
-            {% if task.content %}
-                {% if task.content.overview %}
-                    <h2>Overview</h2>
-                    <p>{{ task.content.overview }}</p>
-                {% endif %}
-
-                {% if task.content.functions %}
-                    <h2>Functions</h2>
-                    <ul>
-                        {% for function_name, function in task.content.functions.items() %}
-                            <li>
-                                <strong>{{ function_name }}</strong>: {{ function.description }}
-                                <br>
-                                <pre><code>{{ function.example }}</code></pre>
-                            </li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
-
-                {% for item_key, item in task.content.items() %}
-                    {% if item_key not in ['overview', 'functions'] %}
-                        <h2>{{ item_key.replace('_', ' ').title() }}</h2>
-                        <p>{{ item.description }}</p>
-                        {% if item.example %}
-                            <pre><code>{{ item.example }}</code></pre>
-                        {% endif %}
-                    {% endif %}
-                {% endfor %}
-            {% else %}
-                <p>No additional content available for this task.</p>
             {% endif %}
         </div>
-    </main>
+            {% if task_id == "task_1" and module_id=="1"%}
+            <div class="task-content">
+                <h2 class="task-title">Overview</h2>
+                <p class="task-description">{{ task.content.overview }}</p>
+        
+                <h2 class="task-title">Module Structure</h2>
+                <pre class="code-block"><code>{{ task.content.structure.example }}</code></pre>
+        
+                <h2 class="task-title">Functions</h2>
+                <div class="functions-list">
+                    {% for function_name, function_info in task.content.functions.items() %}
+                        <h3 class="function-name">{{ function_name | title }}</h3>
+                        <p class="function-description">{{ function_info.description }}</p>
+                        <pre class="code-block"><code>{{ function_info.example }}</code></pre>
+                    {% endfor %}
+                </div>
+            </div>
+        {% endif %}
+        
+        {% if task_id == "task_14" and module_id=="1"%}
+            <div class="task-content">
+                <h2 class="task-title">{{ task.title }}</h2>
+                <p class="task-description">{{ task.description }}</p>
+        
+                <h3 class="functions-header">Functions in the Math Module</h3>
+                <ul class="functions-list">
+                    {% for function_name, function in task.functions.items() %}
+                        <li class="function-item">
+                            <strong class="function-name">{{ function_name | default('Unnamed Function') }}</strong>: {{ function.description | default('No description available.') }}
+                            <br>
+                            {% if function.example %}
+                                <pre class="code-block"><code>{{ function.example.code | default('No code provided.') }}</code></pre>
+                                <p><strong>Output:</strong> {{ function.example.output | default('No output provided.') }}</p>
+                            {% endif %}
+                            {% if function.examples %}
+                                <h4 class="additional-examples-header">Additional Examples:</h4>
+                                <ul class="additional-examples-list">
+                                    {% for example in function.examples %}
+                                        <li class="example-item">
+                                            <pre class="code-block"><code>{{ example.code | default('No code provided.') }}</code></pre>
+                                            <p><strong>Output:</strong> {{ example.output | default('No output provided.') }}</p>
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            {% endif %}
+                            {% if function.note %}
+                                <p class="function-note"><strong>Note:</strong> {{ function.note }}</p>
+                            {% endif %}
+                            {% if function.reference %}
+                                <p class="function-reference"><strong>Reference:</strong> {{ function.reference }}</p>
+                            {% endif %}
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        {% endif %}
+        
+        {% if task_id == "task_15" and module_id=="1" %}
+            <div class="task-content">
+                <h2 class="examples-header">Examples</h2>
+                <div class="examples-list">
+                    {% for example in task.examples %}
+                        <h3 class="example-title">{{ example.title }}</h3>
+                        <h4 class="example-code-header">Code:</h4>
+                        <pre class="code-block">
+                        <code>
+                        {% for line in example.code %}
+                        {{ line }}
+                        {% endfor %}
+                        </code>
+                        </pre>
+                        <h4 class="example-output-header">Output:</h4>
+                        <pre class="code-block">
+                        <code>
+                        {% for line in example.output %}
+                        {{ line }}
+                        {% endfor %}
+                        </code>
+                        </pre>
+                    {% endfor %}
+                </div>
+            </div>
+        {% endif %}
+        {% if task_id == "task_1" and module_id=="2"%}
+        <div class="task-content">
+            <h2 class="task-title">{{ task.title }}</h2>
+            <p class="task-description">{{ task.description }}</p>
+            <a href="{{ task.learning_topic }}" target="_blank">Learning Topic</a>
+            <p><strong>Note:</strong> {{ task.note }}</p>
+    
+            <h3>Key Features</h3>
+            <ul>
+                {% for feature in task.key_features %}
+                    <li>{{ feature }}</li>
+                {% endfor %}
+            </ul>
+    
+            <h3>Common Methods</h3>
+            <div class="methods-list">
+                {% for method, description in task.common_methods.items() %}
+                    <h4 class="method-name">{{ method }}</h4>
+                    <p class="method-description">{{ description }}</p>
+                {% endfor %}
+            </div>
+    
+            <h3>Examples</h3>
+            <div class="examples-list">
+                {% for example in task.examples %}
+                    <h4 class="example-title">{{ example.title }}</h4>
+                    <pre class="code-block"><code>{{ example.code | join('\n') }}</code></pre>
+                    <p class="example-output"><strong>Output:</strong> {{ example.output }}</p>
+                {% endfor %}
+            </div>
+    
+            <p><em>{{ task.reference }}</em></p>
+        </div>
+    {% endif %}
+    
+        {% if task_id == "task_1" and module_id=="3"%}
+    <div class="task-content">
+        {% for section in task.sections %}
+            <h2 class="task-title">{{ section.heading }}</h2>
+            {% for content in section.content %}
+                {% if content.definition %}
+                    <p class="task-description">{{ content.definition }}</p>
+                {% endif %}
+                {% if content.structure %}
+                    <p class="task-description">{{ content.structure }}</p>
+                {% endif %}
+                {% if content.library_overview %}
+                    <p class="task-description">{{ content.library_overview }}</p>
+                {% endif %}
+                {% if content.key_functions %}
+                    <div class="functions-list">
+                        {% for function in content.key_functions %}
+                            <h3 class="function-name">{{ function.function | title }}</h3>
+                            <p class="function-description">{{ function.description }}</p>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+                {% if content.applications %}
+                    <p class="task-description">{{ content.applications }}</p>
+                {% endif %}
+                {% if content.real_world_examples %}
+                    <div class="real-world-examples">
+                        {% for example in content.real_world_examples %}
+                            <h4 class="example-title">{{ example.example }}</h4>
+                            <p class="example-description">{{ example.description }}</p>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+                {% if content.basic_task %}
+                    <p class="task-description">{{ content.basic_task }}</p>
+                {% endif %}
+                {% if content.intermediate_challenge %}
+                    <p class="task-description">{{ content.intermediate_challenge }}</p>
+                {% endif %}
+                {% if content.advanced_project %}
+                    <p class="task-description">{{ content.advanced_project }}</p>
+                {% endif %}
+            {% endfor %}
+        {% endfor %}
+    </div>
+{% endif %}
+{% if task_id == "task_1" and module_id=="4"%}
+    <div class="task-content module-4">
+        <h2 class="task-title">{{ task.title }}</h2>
+        <p class="task-description">{{ task.description }}</p>
+
+        <section class="overview-section">
+            <h3>Overview</h3>
+            <p class="definition"><strong>Definition:</strong> {{ task.content.overview.definition }}</p>
+            <h4>Features</h4>
+            <ul class="features-list">
+                {% for feature in task.content.overview.features %}
+                    <li>{{ feature }}</li>
+                {% endfor %}
+            </ul>
+            <h4>Benefits</h4>
+            <ul class="benefits-list">
+                {% for benefit in task.content.overview.benefits %}
+                    <li>{{ benefit }}</li>
+                {% endfor %}
+            </ul>
+        </section>
+
+        <section class="drawing-shapes-section">
+            <h3>Drawing Shapes</h3>
+            <p><strong>Concept:</strong> {{ task.content.drawing_shapes.concept }}</p>
+            <h4>Example Code</h4>
+            <pre class="code-block"><code>{{ task.content.drawing_shapes.example_code }}</code></pre>
+            <p class="explanation"><strong>Explanation:</strong> {{ task.content.drawing_shapes.explanation }}</p>
+        </section>
+
+        <section class="event-handling-section">
+            <h3>Event Handling</h3>
+            <p><strong>Concept:</strong> {{ task.content.event_handling.concept }}</p>
+            <h4>Example Code</h4>
+            <pre class="code-block"><code>{{ task.content.event_handling.example_code }}</code></pre>
+            <p class="explanation"><strong>Explanation:</strong> {{ task.content.event_handling.explanation }}</p>
+        </section>
+
+        <section class="best-practices-section">
+            <h3>Best Practices</h3>
+            <h4>Tips</h4>
+            <ul class="tips-list">
+                {% for tip in task.content.best_practices.tips %}
+                    <li>{{ tip }}</li>
+                {% endfor %}
+            </ul>
+            <p class="next-steps"><strong>Next Steps:</strong> {{ task.content.best_practices.next_steps }}</p>
+        </section>
+
+        <section class="resources-section">
+            <h3>Resources</h3>
+            <p><strong>Official Documentation:</strong> <a href="{{ task.content.resources.official_documentation }}" target="_blank">{{ task.content.resources.official_documentation }}</a></p>
+            <h4>Tutorials</h4>
+            <ul class="tutorials-list">
+                {% for tutorial in task.content.resources.tutorials %}
+                    <li>{{ tutorial }}</li>
+                {% endfor %}
+            </ul>
+        </section>
+    </div>
+{% endif %}
+
+{% if task_id == "task_1" and module_id=="5"%}
+    <div class="task-content module-5">
+        <h2 class="task-title">{{ task.title }}</h2>
+        <p class="task-description">{{ task.description }}</p>
+
+        <section class="resources-section">
+            <h3>Resources</h3>
+            <ul class="resources-list">
+                {% for resource in task.resources %}
+                    <li>
+                        <a href="{{ resource.link }}" target="_blank">{{ resource.title }}</a>: {{ resource.description }}
+                    </li>
+                {% endfor %}
+            </ul>
+        </section>
+
+        <section class="theory-section">
+            <h3>Theory</h3>
+            <h4>Pygame Surfaces</h4>
+            <p class="definition"><strong>Definition:</strong> {{ task.theory['Pygame Surfaces'].definition }}</p>
+            <h4>Key Points</h4>
+            <ul class="key-points-list">
+                {% for point in task.theory['Pygame Surfaces'].key_points %}
+                    <li><strong>{{ point.point }}:</strong> {{ point.details }}</li>
+                {% endfor %}
+            </ul>
+
+            <h4>Animation in Pygame</h4>
+            <p class="definition"><strong>Definition:</strong> {{ task.theory['Animation in Pygame'].definition }}</p>
+            <h4>Key Points</h4>
+            <ul class="key-points-list">
+                {% for point in task.theory['Animation in Pygame'].key_points %}
+                    <li><strong>{{ point.point }}:</strong> {{ point.details }}</li>
+                {% endfor %}
+            </ul>
+        </section>
+
+        <section class="explanation-section">
+            <h3>Explanation</h3>
+            <h4>Beginner Level</h4>
+            <ul class="beginner-content">
+                {% for content in task.explanation.beginner.content %}
+                    <li><strong>{{ content.tag | title }}:</strong> {{ content.text }}</li>
+                {% endfor %}
+            </ul>
+
+            <h4>Intermediate Level</h4>
+            <ul class="intermediate-content">
+                {% for content in task.explanation.intermediate.content %}
+                    <li><strong>{{ content.tag | title }}:</strong> {{ content.text }}</li>
+                {% endfor %}
+            </ul>
+
+            <h4>Advanced Level</h4>
+            <ul class="advanced-content">
+                {% for content in task.explanation.advanced.content %}
+                    <li><strong>{{ content.tag | title }}:</strong> {{ content.text }}</li>
+                {% endfor %}
+            </ul>
+        </section>
+    </div>
+{% endif %}
+
+{% if task_id == "task_6" and module_id == "5" %}
+    <div class="task-content module-5-task6">
+        <h2 class="task-title">{{ task.title }}</h2>
+        <p class="task-description">{{ task.description }}</p>
+
+        <section class="key-points-section">
+            <h3>Key Points</h3>
+            <ul class="key-points-list">
+                {% for point in task.key_points %}
+                    <li>
+                        <strong>{{ point.title }}:</strong> {{ point.details }}
+                    </li>
+                {% endfor %}
+            </ul>
+        </section>
+
+        <section class="conclusion-section">
+            <h3>Conclusion</h3>
+            <p>{{ task.conclusion }}</p>
+        </section>
+
+        <section class="resources-section">
+            <h3>Additional Resources</h3>
+            <ul class="resources-list">
+                <li>
+                    <a href="{{ task.link }}" target="_blank">Learn more about Loading and Animating Pictures in Pygame</a>
+                </li>
+            </ul>
+        </section>
+    </div>
+{% endif %}
+</main>
 </div>
+        
+
+
 {% endblock %}
